--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,127 @@
-body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
+html{
+    box-sizing: border-box;
+    font-size: 62.5%;
 }
 
-header {
-    padding: 20px;
-    text-align: left;
+*, ::before, ::after {
+    box-sizing: inherit;
 }
 
-#tittle-not-found {
-    font-family: 'Inconsolata', monospace;
-    font-size: 1.5rem;
+/*Globales*/
+.container{
+    max-width: 120rem;
+    width: 90%;
+    margin: 0 auto;
+}
+
+img{
+    width: 100%;
+    display: block;
+}
+
+/*Header*/
+.header{
+    margin: 2rem 0 10rem 0;
+}
+
+.tittle-not-found{
+    font-family: "Inconsolata", monospace;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+/*Contenido*/
+.container-img-information{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+}
+
+.main-tittle{
+    font-family: "Space Mono", monospace;
+    font-size: 4.8rem;
+    font-weight: 700;
+    line-height: 1.5;
     color: #333333;
 }
 
-main{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: 20px;
-}
-
-.div-img, .div-block {
-    flex: 1;
-    padding: 20px;
-    text-align: left;
-}
-
-.div-img img {
-    max-width: 100%;
-    height: auto;
-}
-
-#main-tittle {
-    font-family: 'Space Mono', monospace;
-    font-size: 4.5rem;
-    color: #333333;
-    margin-top: 1rem;
-}
-
-#information-paragraph {
-    font-family: 'Space Mono', monospace;
-    font-size: 2.6rem;
+.information-paragraph{
+    font-family: "Space Mono", monospace;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 2;
     color: #4F4F4F;
-    margin-top: 1rem;
 }
 
-button#btn-back {
+.btn-back{
+    width: 19.5rem;
+    height: 5.5rem;
     background-color: #333333;
-    font-family: 'Space Mono', monospace;
-    font-size: 1rem;
-    color: #FFFFFF;
-    padding: 2rem 2rem;
-    border: none;
-    cursor: pointer;
-    margin-top: 1rem;
-}
-
-footer{
+    color: #fff;
     text-align: center;
-    margin-top: 10rem;
+    font-family: "Space Mono", monospace;
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 4.5;
+    border-radius: 5px;
 }
 
-#footer-paragraph {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1rem;
-    color: #BDBDBD;
-    /* margin-top: 0.5rem; */
+.btn-back:hover{
+    background-color: #252525;
+    color: #fff;
+    cursor: pointer;
 }
 
-@media screen and (max-width: 1200px) {   
-    .div-img, .div-block {
-        flex: 100%;
-        max-width: 100%;
-    }
+.footer{
+    margin: 12rem 0 0.5rem 0;
 }
 
-@media screen and (max-width: 768px) {
-    .div-img, .div-block {
-        flex: 100%;
-        max-width: 100%;
+.footer-paragraph{
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.4rem;
+    font-family: 500;
+    text-align: center;
+}
+
+.footer-paragraph span{
+    font-size: 1.6rem;
+    font-weight: bold;
+    border-bottom: 2px solid #333333;
+    cursor: pointer;
+}
+
+.footer-paragraph span:hover{
+    border-bottom: 2px solid #252525;
+    cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    .header{
+        margin: 4rem 0 15rem 0;
     }
 
-    .div-img img {
-        max-width: 80%;
-        height: auto;
-    }
-    
-    #tittle-not-found{
-        font-size: 1rem;
+    .container-img-information{
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        gap: 4rem;
     }
 
-    #main-tittle {
-        font-size: 2rem;
-    }
-    
-    #information-paragraph {
-        font-size: 1.25rem;
-    }
-    
-    button#btn-back {
-        font-size: 0.5rem;
-        padding: 1rem 1rem;
+    .main-tittle{
+        font-size: 6.3rem;
     }
 
-    #footer-paragraph {
-        font-size: 0.8rem;
+    .information-paragraph{
+        font-size: 2.8rem;
+    }
+
+    .btn-back{
+        width: 21.6rem;
+        height: 6.8rem;
+        font-size: 1.4rem;
+        line-height: 5;
+    }
+
+    .footer{
+        margin: 15rem 0 2rem 0;
     }
 }
