--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,13 @@ img{
     gap: 2rem;
 }
 
+.container-img-information img{
+    animation: move 3s infinite linear;
+}
+
 .main-tittle{
     font-family: "Space Mono", monospace;
-    font-size: 4.8rem;
+    font-size: 3rem;
     font-weight: 700;
     line-height: 1.5;
     color: #333333;
@@ -54,15 +58,15 @@ img{
 }
 
 .btn-back{
-    width: 19.5rem;
-    height: 5.5rem;
+    width: 15rem;
+    height: 5rem;
     background-color: #333333;
     color: #fff;
     text-align: center;
     font-family: "Space Mono", monospace;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
-    line-height: 4.5;
+    line-height: 5;
     border-radius: 5px;
 }
 
@@ -73,7 +77,17 @@ img{
 }
 
 .footer{
-    margin: 12rem 0 0.5rem 0;
+    position: relative;
+    bottom: 0;
+    margin: 15rem 0 0 0;
+}
+
+.footer div{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0 0 1rem 0;
 }
 
 .footer-paragraph{
@@ -87,11 +101,10 @@ img{
     font-size: 1.6rem;
     font-weight: bold;
     border-bottom: 2px solid #333333;
-    cursor: pointer;
 }
 
 .footer-paragraph span:hover{
-    border-bottom: 2px solid #252525;
+    border-bottom: 2px solid #878787;
     cursor: pointer;
 }
 
@@ -107,6 +120,35 @@ img{
     }
 
     .main-tittle{
+        font-size: 4rem;
+    }
+
+    .information-paragraph{
+        font-size: 2.2rem;
+    }
+
+    .btn-back{
+        width: 18rem;
+        height: 5rem;
+        font-size: 1.2rem;
+        line-height: 4;
+    }
+
+    .footer{
+        margin: 20rem 0 0rem 0;
+    }
+
+    .footer div{
+        margin: 0;
+    }
+}
+
+@media (min-width: 992px){
+    .header{
+        margin: 2rem 0 15rem 0;
+    }
+
+    .main-tittle{
         font-size: 6.3rem;
     }
 
@@ -118,10 +160,13 @@ img{
         width: 21.6rem;
         height: 6.8rem;
         font-size: 1.4rem;
-        line-height: 5;
     }
 
     .footer{
-        margin: 15rem 0 2rem 0;
+        margin: 20rem 0 0 0;
+    }
+
+    .footer div{
+        margin: 0 0 2rem 0;
     }
 }
