--- a/css/style.css
+++ b/css/style.css
@@ -37,10 +37,6 @@ img{
     gap: 2rem;
 }
 
-.container-img-information img{
-    animation: move 3s infinite linear;
-}
-
 .main-tittle{
     font-family: "Space Mono", monospace;
     font-size: 3rem;
@@ -68,6 +64,7 @@ img{
     font-weight: 700;
     line-height: 5;
     border-radius: 5px;
+    line-height: 5;
 }
 
 .btn-back:hover{
@@ -113,12 +110,6 @@ img{
         margin: 4rem 0 15rem 0;
     }
 
-    .container-img-information{
-        display: grid;
-        grid-template-columns: 2fr 2fr;
-        gap: 4rem;
-    }
-
     .main-tittle{
         font-size: 4rem;
     }
@@ -129,13 +120,13 @@ img{
 
     .btn-back{
         width: 18rem;
-        height: 5rem;
+        height: 6rem;
         font-size: 1.2rem;
-        line-height: 4;
+        line-height: 5;
     }
 
     .footer{
-        margin: 20rem 0 0rem 0;
+        margin: 20rem 0 0 0;
     }
 
     .footer div{
@@ -146,6 +137,12 @@ img{
 @media (min-width: 992px){
     .header{
         margin: 2rem 0 15rem 0;
+    }
+
+    .container-img-information{
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        gap: 4rem;
     }
 
     .main-tittle{
@@ -160,6 +157,7 @@ img{
         width: 21.6rem;
         height: 6.8rem;
         font-size: 1.4rem;
+        line-height: 5;
     }
 
     .footer{
